--- a/src/SapNwRfc/SapNwRfc.csproj
+++ b/src/SapNwRfc/SapNwRfc.csproj
@@ -1,30 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <!-- Compilation properties. -->
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <AssemblyName>SapNwRfcDotNet</AssemblyName>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+
+
+  <!-- Publication properties. -->
+  <PropertyGroup>
+    <PackageId>SapNwRfc</PackageId>
     <Title>SapNwRfc</Title>
-    <Version>1.0.0.0</Version>
+    <Description>SAP Netweaver RFC library for .NET Core and .NET Framework</Description>
     <Authors>Wouter Huysentruit</Authors>
     <Company>Wouter Huysentruit</Company>
-    <Description>SAP Netweaver RFC library for .NET Core and .NET Framework</Description>
     <PackageProjectUrl>https://github.com/huysentruitw/SapNwRfc</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/huysentruitw/SapNwRfc</RepositoryUrl>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <CodeAnalysisRuleSet>..\..\ca.ruleset</CodeAnalysisRuleSet>
-    <AssemblyName>SapNwRfcDotNet</AssemblyName>
-    <PackageId>SapNwRfc</PackageId>
-    <SignAssembly>true</SignAssembly>
-	  <DelaySign>false</DelaySign>
-    <AssemblyOriginatorKeyFile>..\..\Signing.snk</AssemblyOriginatorKeyFile>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-  </PropertyGroup>
 
+  <!-- Dependencies. -->
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
@@ -32,6 +32,8 @@
     </PackageReference>
   </ItemGroup>
 
+
+  <!-- Code generation properties. -->
   <ItemGroup>
     <None Update="Exceptions\SapErrorGroup.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -40,9 +42,6 @@
     <None Update="Exceptions\SapResultCode.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>SapResultCode.cs</LastGenOutput>
-    </None>
-    <None Include="..\..\Signing.snk">
-      <Link>Signing.snk</Link>
     </None>
   </ItemGroup>
 
