Move analyzers configuration to editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -178,3 +178,59 @@ csharp_space_between_method_call_empty_parameter_list_parentheses       = false
 # Wrapping
 csharp_preserve_single_line_statements                                  = false
 csharp_preserve_single_line_blocks                                      = true
+
+# Dotnet analyzers settings:
+[*.cs]
+# XML comment analysis is disabled due to project configuration
+dotnet_diagnostic.SA0001.severity = none
+
+# Opening parenthesis must not be preceded by a space - NOT COMPATIBLE WITH TUPLES
+dotnet_diagnostic.SA1008.severity = none
+
+# Closing parenthesis must be followed by a space - NOT COMPATIBLE WITH TUPLES
+dotnet_diagnostic.SA1009.severity = none
+
+# Prefix local calls with this
+dotnet_diagnostic.SA1101.severity = none
+
+# The parameters must all be placed on the same line or each parameter must be placed on its own line
+dotnet_diagnostic.SA1117.severity = none
+
+# The parameters spans multiple lines
+dotnet_diagnostic.SA1118.severity = none
+
+# Using directive must appear within a namespace declaration
+dotnet_diagnostic.SA1200.severity = none
+
+# Ordering elements within namespace
+dotnet_diagnostic.SA1201.severity = none
+
+#
+dotnet_diagnostic.SA1202.severity = none
+
+# Ordering members withing class
+dotnet_diagnostic.SA1204.severity = none
+
+# Field must not begin with an underscore
+dotnet_diagnostic.SA1309.severity = none
+
+# File may only contain a single class
+dotnet_diagnostic.SA1402.severity = none
+
+# Arithmetic expressions must declare precedence
+dotnet_diagnostic.SA1407.severity = none
+
+# Statement must not be on a single line
+dotnet_diagnostic.SA1501.severity = none
+
+# Braces must not be omitted
+dotnet_diagnostic.SA1503.severity = none
+
+# Elements should be documented
+dotnet_diagnostic.SA1600.severity = none
+
+# Enumeration items should be documented
+dotnet_diagnostic.SA1602.severity = none
+
+# The file header is missing or not located at the top of the file
+dotnet_diagnostic.SA1633.severity = none
