--- a/tests/SapNwRfc.Tests/SapNwRfc.Tests.csproj
+++ b/tests/SapNwRfc.Tests/SapNwRfc.Tests.csproj
@@ -23,6 +23,10 @@
     <PackageReference Include="altcover" Version="6.7.750" />
     <PackageReference Include="AutoFixture" Version="4.11.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="IsExternalInit" Version="1.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
